@@ -1,11 +1,7 @@
 package org.scribe.builder.api;
 
-import org.scribe.extensions.linkedin.*;
-import org.scribe.extractors.*;
-
 public class LinkedInApi extends DefaultApi10a
 {
-
   @Override
   protected String getAccessTokenEndpoint()
   {
@@ -17,11 +13,4 @@ public class LinkedInApi extends DefaultApi10a
   {
     return "https://api.linkedin.com/uas/oauth/requestToken";
   }
-  
-  @Override
-  protected BaseStringExtractor getBaseStringExtractor()
-  {
-    return new LinkedInBaseStringExtractorImpl();
-  }
-
 }
