@@ -11,3 +11,4 @@
 
  * FEATURE: Added setConnectTimeout and setReadTimeout for the Request Object
  * FIX: Fixed Evernote Api (uses GET for request and access tokens)
+ * REFACTOR: URLEncoding stuff. LinkedIn specific decoder is no longer needed
